--- a/build.gradle
+++ b/build.gradle
@@ -46,4 +46,6 @@ dependencies {
 
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
     testImplementation 'org.springframework.security:spring-security-test'
+
+    compile("org.projectlombok:lombok:1.18.2")
 }
