--- a/build.gradle
+++ b/build.gradle
@@ -39,15 +39,9 @@ dependencies {
     compile group: 'org.apache.commons', name: 'commons-lang3', version: '3.8.1'
     compile group: 'org.slf4j', name: 'slf4j-api', version: '1.7.25'
 
-    // https://mvnrepository.com/artifact/com.google.guava/guava
     compile group: 'com.google.guava', name: 'guava', version: '27.1-jre'
-
-
-    // https://mvnrepository.com/artifact/io.springfox/springfox-swagger2
     compile group: 'io.springfox', name: 'springfox-swagger2', version: '2.9.2'
-
-//    implementation("io.springfox:springfox-swagger2:2.6.1")
-//    implementation("io.springfox:springfox-swagger-ui:2.6.1")
+    compile group: 'io.springfox', name: 'springfox-swagger-ui', version: '2.9.2'
 
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
     testImplementation 'org.springframework.security:spring-security-test'
