--- a/build.gradle
+++ b/build.gradle
@@ -47,4 +47,7 @@ dependencies {
     testImplementation 'org.springframework.security:spring-security-test'
 
     compile("org.projectlombok:lombok:1.18.2")
+
+    compile group: 'org.hibernate', name: 'hibernate-jpamodelgen', version: '5.2.17.Final'
+
 }
