--- a/build.gradle
+++ b/build.gradle
@@ -49,4 +49,16 @@ dependencies {
 
     compile("org.projectlombok:lombok:1.18.2")
 
+    // https://mvnrepository.com/artifact/org.hibernate/hibernate-jpamodelgen
+    compile group: 'org.hibernate', name: 'hibernate-jpamodelgen', version: '5.3.7.Final'
+
 }
+
+compileJava {
+    options.compilerArgs << "-s"
+    options.compilerArgs << "$projectDir/build/generated"
+    doFirst {
+        file(new File("$projectDir/build/generated")).mkdirs()
+    }
+}
+sourceSets.main.java.srcDirs += "$projectDir/build/generated"
