--- a/build.gradle
+++ b/build.gradle
@@ -48,6 +48,13 @@ dependencies {
     testImplementation 'org.springframework.security:spring-security-test'
 
     compile("org.projectlombok:lombok:1.18.2")
+    
+    //excel
+    compile group: 'org.apache.poi', name: 'poi', version: '3.17'
+    compile group: 'org.apache.poi', name: 'poi-ooxml', version: '3.17'
+    compile group: 'net.sf.jxls', name: 'jxls-core', version: '1.0.6'
+
+
 
 }
 
