--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,12 @@
 
 spring.main.allow-bean-definition-overriding=true
 
+debug=true
+logging.level.root=WARN
+logging.level.org.springframework.web=DEBUG
+logging.level.tk.mybatis.springboot.mapper=trace
+logging.pattern.console=%d{yyyy-MM-dd/HH:mm:ss} [%thread] %-5level %logger- %msg%n 
+logging.pattern.file=%d{yyyy-MM-dd/HH:mm} [%thread] %-5level %logger- %msg%n
+
+logging.file=iptv.log
+logging.path=/var/log
