--- a/build.gradle
+++ b/build.gradle
@@ -38,6 +38,8 @@ dependencies {
     implementation group: 'com.alibaba', name: 'fastjson', version: '1.2.47'
 
     compile group: 'org.apache.commons', name: 'commons-lang3', version: '3.8.1'
+    compile group: 'commons-lang', name: 'commons-lang', version: '2.6'
+
     compile group: 'org.slf4j', name: 'slf4j-api', version: '1.7.25'
 
     compile group: 'com.google.guava', name: 'guava', version: '27.1-jre'
@@ -53,8 +55,6 @@ dependencies {
     compile group: 'org.apache.poi', name: 'poi', version: '3.17'
     compile group: 'org.apache.poi', name: 'poi-ooxml', version: '3.17'
     compile group: 'net.sf.jxls', name: 'jxls-core', version: '1.0.6'
-
-
 
 }
 
