--- a/build.gradle
+++ b/build.gradle
@@ -58,3 +58,7 @@ dependencies {
 
 }
 
+dependencies {
+    compileOnly 'org.projectlombok:lombok:1.18.8'
+    annotationProcessor 'org.projectlombok:lombok:1.18.8'
+}
