--- a/build.gradle
+++ b/build.gradle
@@ -50,6 +50,7 @@ dependencies {
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
     testImplementation 'org.springframework.security:spring-security-test'
 
+    //lombok插件
     compile("org.projectlombok:lombok:1.18.2")
     
     //excel
@@ -67,6 +68,9 @@ dependencies {
     compile group: 'com.xuxueli', name: 'xxl-excel', version: '1.1.1'
     //hutool工具包
     compile 'cn.hutool:hutool-all:4.5.9'
+    // openkit第三方工具包
+    compile group: 'cc.openkit', name: 'open_kit', version: '1.1.18'
+    
 
 
 
