--- a/build.gradle
+++ b/build.gradle
@@ -64,7 +64,8 @@ dependencies {
 
     //poi，xuxueli工具包
     compile group: 'com.xuxueli', name: 'xxl-excel', version: '1.1.1'
-
+    //hutool 工具包
+    compile 'cn.hutool:hutool-all:4.5.9'
 
     compileJava {
         options.compilerArgs << "-s"
