--- a/src/main/resources/application-localhost.yml
+++ b/src/main/resources/application-localhost.yml
@@ -9,7 +9,7 @@ spring:
     username: root
     password: root
     #serverTimezone=GMT
-    url: jdbc:mysql://localhost:3306/iptv_sas?characterEncoding=utf-8&useSSl=false&serverTimezone=GMT
+    url: jdbc:mysql://localhost:3306/iptv_sas?characterEncoding=utf-8&useSSl=false&serverTimezone=Asia/Shanghai
     driver-class-name: com.mysql.cj.jdbc.Driver
     type: com.alibaba.druid.pool.DruidDataSource
 
